Refactor SecurityConfig for user authentication and CORS
Updated security configuration to include user authentication and CORS settings.